--- a/team1/src/main/resources/application.properties
+++ b/team1/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=team1
+
+# HTTP 응답 UTF-8 (한글 깨짐 방지)
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force-response=true
+
+# MySQL (환경 변수 사용, 미설정 시 기본값)
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:team1}?useUnicode=true&characterEncoding=UTF-8&connectionCollation=utf8mb4_unicode_ci&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USER:team1}
+spring.datasource.password=${MYSQL_PASSWORD:team1}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+# API 응답 필드 snake_case (스펙 준수)
+spring.jackson.property-naming-strategy=SNAKE_CASE
