--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: mysql:8.0
     container_name: team1-mysql
     restart: always
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
       # 아래 환경 변수들은 .env 또는 CI 환경에서 주입해야 합니다.
       # 예시 값: root / team1 / team1 / team1
@@ -15,7 +16,6 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      # 2단계에서 이 디렉터리에 schema/data SQL 파일을 추가할 예정
       - ./mysql/init:/docker-entrypoint-initdb.d
       - mysql-data:/var/lib/mysql
 
@@ -26,7 +26,7 @@ services:
       - mysql
     environment:
       # DB 접속 정보는 .env 에서 주입된 값을 재사용합니다.
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/${MYSQL_DATABASE}?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/${MYSQL_DATABASE}?useSSL=false&useUnicode=true&characterEncoding=UTF-8&connectionCollation=utf8mb4_unicode_ci&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
       SPRING_JPA_HIBERNATE_DDL_AUTO: none
