feat: 인증/인가 구현

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,8 @@ MYSQL_DATABASE=team1
 MYSQL_USER=team1
 MYSQL_PASSWORD=team1
 
+# JWT (Week 2 인증)
+# HS256 사용 시 최소 32자 이상 권장
+JWT_SECRET=your-secret-key-at-least-32-characters-long-for-hs256
+JWT_ACCESS_EXPIRE_MINUTES=30
+JWT_REFRESH_EXPIRE_DAYS=7
