--- a/team1/src/main/resources/application.properties
+++ b/team1/src/main/resources/application.properties
@@ -17,5 +17,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
-# API 응답 필드 snake_case (스펙 준수)
+# API 요청/응답 필드 snake_case (스펙 준수)
 spring.jackson.property-naming-strategy=SNAKE_CASE
+
+# JWT (환경 변수 사용 권장)
+app.jwt.secret=${JWT_SECRET:default-secret-change-in-production-min-32-chars-for-hs256}
+app.jwt.access-expire-minutes=${JWT_ACCESS_EXPIRE_MINUTES:30}
+app.jwt.refresh-expire-days=${JWT_REFRESH_EXPIRE_DAYS:7}
