--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,19 @@ services:
     volumes:
       - ./mysql/init:/docker-entrypoint-initdb.d
       - mysql-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 15s
 
   app:
     build: ./team1
     container_name: team1-app
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     environment:
       # DB 접속 정보는 .env 에서 주입된 값을 재사용합니다.
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/${MYSQL_DATABASE}?useSSL=false&useUnicode=true&characterEncoding=UTF-8&connectionCollation=utf8mb4_unicode_ci&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
