--- a/team1/src/main/resources/application.properties
+++ b/team1/src/main/resources/application.properties
@@ -24,3 +24,14 @@ spring.jackson.property-naming-strategy=SNAKE_CASE
 app.jwt.secret=${JWT_SECRET:default-secret-change-in-production-min-32-chars-for-hs256}
 app.jwt.access-expire-minutes=${JWT_ACCESS_EXPIRE_MINUTES:30}
 app.jwt.refresh-expire-days=${JWT_REFRESH_EXPIRE_DAYS:7}
+
+# AWS S3
+cloud.aws.credentials.access-key=${AWS_S3_ACCESS_KEY:}
+cloud.aws.credentials.secret-key=${AWS_S3_SECRET_KEY:}
+cloud.aws.region.static=${AWS_S3_REGION:ap-southeast-2}
+cloud.aws.s3.bucket=${AWS_S3_BUCKET:gdg-sprint-team1-images}
+
+# Multipart 설정
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
