--- a/.github/workflows/staging-deploy-gcp.yml
+++ b/.github/workflows/staging-deploy-gcp.yml
@@ -34,11 +34,25 @@ jobs:
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
           port: ${{ secrets.DEPLOY_SSH_PORT || '22' }}
+          envs: AWS_S3_ACCESS_KEY,AWS_S3_SECRET_KEY,AWS_S3_REGION,AWS_S3_BUCKET
           script: |
             set -e
             cd ${{ secrets.DEPLOY_PATH }}
             git fetch origin staging
             git reset --hard origin/staging
+            
+            cat > team1/.env << EOF
+            AWS_S3_ACCESS_KEY=${{ secrets.AWS_S3_ACCESS_KEY }}
+            AWS_S3_SECRET_KEY=${{ secrets.AWS_S3_SECRET_KEY }}
+            AWS_S3_REGION=${{ secrets.AWS_S3_REGION }}
+            AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }}
+            EOF
+            
             docker compose pull --quiet
             docker compose up -d --build
             docker image prune -f || true
+        env:
+          AWS_S3_ACCESS_KEY: ${{ secrets.AWS_S3_ACCESS_KEY }}
+          AWS_S3_SECRET_KEY: ${{ secrets.AWS_S3_SECRET_KEY }}
+          AWS_S3_REGION: ${{ secrets.AWS_S3_REGION }}
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
