--- a/.github/workflows/staging-deploy-gcp.yml
+++ b/.github/workflows/staging-deploy-gcp.yml
@@ -47,6 +47,7 @@ jobs:
             AWS_S3_REGION=${{ secrets.AWS_S3_REGION }}
             AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }}
             EOF
+            chmod 600 team1/.env
             
             docker compose pull --quiet
             docker compose up -d --build
