fix: CORS 설정 추가

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,6 @@ MYSQL_PASSWORD=team1
 JWT_SECRET=your-secret-key-at-least-32-characters-long-for-hs256
 JWT_ACCESS_EXPIRE_MINUTES=30
 JWT_REFRESH_EXPIRE_DAYS=7
+
+# CORS (프론트 배포 시) - 허용할 프론트 URL, 쉼표 구분 (로컬 localhost는 기본 허용)
+# CORS_ALLOWED_ORIGINS=https://your-app.vercel.app
