--- a/team1/src/main/resources/application.properties
+++ b/team1/src/main/resources/application.properties
@@ -35,3 +35,6 @@ cloud.aws.s3.bucket=${AWS_S3_BUCKET:gdg-sprint-team1-images}
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# CORS: 배포 프론트 URL을 쉼표로 구분해 추가 (예: https://your-app.vercel.app)
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:}
