--- a/team1/src/main/resources/application.properties
+++ b/team1/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=team1
 
+# Spring Boot 4 + springdoc 호환: Jackson 2 사용 (Swagger UI 동작)
+spring.http.converters.preferred-json-mapper=jackson2
+
 # HTTP 응답 UTF-8 (한글 깨짐 방지)
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force-response=true
