--- a/team1/build.gradle
+++ b/team1/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1'
 	// Spring Boot 4는 Jackson 3 기본 사용. springdoc/swagger-core가 Jackson 2를 사용하므로 Jackson 2 폴백
 	implementation 'org.springframework.boot:spring-boot-jackson2'
+	// Jackson 2 사용 시 java.time.Instant 등 직렬화 지원
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	// BCrypt 비밀번호 해싱 (Spring Security 전체가 아닌 crypto만)
 	implementation 'org.springframework.security:spring-security-crypto:6.4.2'
 	// JWT
